# Portfolio

./: README.md
Electromagnetic Gauss Rifle/: README.md  main.ino
FTC Robotics/: Auto2025.kt  README.md  TeleOp2024.kt
Hackathon Projects/: README.md
Paesano/: .gitignore  AUDIT.md  CodeStandard.md
Paesano/src/paesano_description/: CMakeLists.txt  README.md  package.xml
Paesano/src/paesano_description/launch/: paesano_description.launch.py
Paesano/src/paesano_description/src/: kinematic_base_system.cpp
Paesano/src/paesano_description/urdf/: paesano-params.xacro  paesano-sensors.xacro  paesano-transmissions.xacro  paesano-wheels.xacro  paesano.urdf  paesano.xacro
Paesano/src/paesano_description/worlds/: mecanum_ode.sdf
Paesano/src/paesano_local_map/: CMakeLists.txt  package.xml
Paesano/src/paesano_local_map/include/paesano_local_map/: local_map.hpp
Paesano/src/paesano_local_map/src/: local_map.cpp
Paesano/src/paesano_localization/: CMakeLists.txt  README.md  package.xml
Paesano/src/paesano_localization/config/: localization.yaml
Paesano/src/paesano_localization/include/paesano_localization/: load_map.hpp  particle_filter.hpp
Paesano/src/paesano_localization/launch/: paesano_localization.launch.py
Paesano/src/paesano_localization/src/: covariances_on_imu.cpp  load_map.cpp  particle_filter.cpp  pf_compute_score.cpp  pf_random_helpers.cpp  pf_resample.cpp  pf_tf_helpers.cpp
Paesano/src/paesano_mobile_bridge/: package.xml  setup.cfg  setup.py
Paesano/src/paesano_mobile_bridge/launch/: paesano_mobile_bridge.launch.py
Paesano/src/paesano_mobile_bridge/paesano_mobile_bridge/: __init__.py  bridge_node.py
Paesano/src/paesano_mobile_bridge/resource/: paesano_mobile_bridge
Paesano/src/paesano_navigation/: CMakeLists.txt  README.md  package.xml
Paesano/src/paesano_navigation/config/: navigation.yaml
Paesano/src/paesano_navigation/include/paesano_navigation/: a_star.hpp  a_star_action_server.hpp  a_star_helpers.hpp
Paesano/src/paesano_navigation/launch/: a_star_action_server.launch.py
Paesano/src/paesano_navigation/src/: a_star.cpp  a_star_action_server.cpp  a_star_helpers.cpp
Paesano/src/paesano_orchestration/: CMakeLists.txt  package.xml
Paesano/src/paesano_orchestration/src/: orchestration_node.cpp
Paesano/src/paesano_orchestrator/: CMakeLists.txt  README.md  package.xml
Paesano/src/paesano_orchestrator/config/: orchestrator.yaml
Paesano/src/paesano_orchestrator/include/paesano_orchestrator/: orchestrator.hpp
Paesano/src/paesano_orchestrator/launch/: orchestrator.launch.py
Paesano/src/paesano_orchestrator/src/: orchestrator.cpp  orchestrator_node.cpp
Paesano/src/paesano_traj_following/: CMakeLists.txt  README.md  package.xml
Paesano/src/paesano_traj_following/config/: lqr.yaml
Paesano/src/paesano_traj_following/include/paesano_traj_following/: lqr.hpp  lqr_helpers.hpp
Paesano/src/paesano_traj_following/launch/: lqr.launch.py
Paesano/src/paesano_traj_following/src/: lqr.cpp  lqr_helpers.cpp
ResearchChat OpenAI API Implementation Example/: README.md
TikkunOlamMakers2025/: README.md
Vision-Based Target Tracking/: README.md  main.ino
slam_bot/src/mecanum_drive_controller/: CMakeLists.txt  README.md  package.xml
slam_bot/src/mecanum_drive_controller/include/: mecanum_drive_controller.hpp
slam_bot/src/mecanum_drive_controller/launch/: mecanum_drive_controller.launch.py
slam_bot/src/mecanum_drive_controller/src/: mecanum_drive_controller.cpp
slam_bot/src/odom_node/: CMakeLists.txt  README.md  package.xml
slam_bot/src/odom_node/include/: odom_node.hpp
slam_bot/src/odom_node/launch/: odom_node.launch.py
slam_bot/src/odom_node/src/: odom_node.cpp
slam_bot/src/slambot_bringup/: CMakeLists.txt  README.md  package.xml
slam_bot/src/slambot_bringup/launch/: slambot_bringup.launch.py
slam_bot/src/slambot_description/: CMakeLists.txt  README.md  package.xml
slam_bot/src/slambot_description/config/: bridge.yaml  mecanum_controller.yaml
slam_bot/src/slambot_description/launch/: slambot_description.launch.py
slam_bot/src/slambot_description/src/: kinematic_base_system.cpp
slam_bot/src/slambot_description/urdf/: slambot-params.xacro  slambot-sensors.xacro  slambot-transmissions.xacro  slambot-wheels.xacro  slambot.urdf  slambot.xacro
slam_bot/src/slambot_description/worlds/: mecanum_ode.sdf
slam_bot/src/slambot_localization/: CMakeLists.txt  README.md  package.xml
slam_bot/src/slambot_localization/config/: ekf.yaml  localization.yaml
slam_bot/src/slambot_localization/include/: covariances_on_imu.hpp  load_map.hpp  particle_filter.hpp
slam_bot/src/slambot_localization/include/slambot_localization/: particle_filter.hpp
slam_bot/src/slambot_localization/launch/: slambot_localization.launch.py
slam_bot/src/slambot_localization/src/: covariances_on_imu.cpp  load_map.cpp  particle_filter.cpp  pf_compute_score.cpp  pf_random_helpers.cpp  pf_resample.cpp  pf_tf_helpers.cpp
slam_bot/src/slambot_mapping/: CMakeLists.txt  README.md  package.xml
slam_bot/src/slambot_mapping/config/: slam_toolbox.yaml
slam_bot/src/slambot_mapping/launch/: mapping.launch.py  slambot_slam_toolbox.launch.py
slam_bot/src/slambot_navigation/: CMakeLists.txt  README.md  package.xml
slam_bot/src/slambot_navigation/action/: AStar.action
slam_bot/src/slambot_navigation/config/: navigation.yaml
slam_bot/src/slambot_navigation/include/slambot_navigation/: a_star.hpp  a_star_action_server.hpp  a_star_helpers.hpp
slam_bot/src/slambot_navigation/launch/: a_star_action_server.launch.py
slam_bot/src/slambot_navigation/src/: a_star.cpp  a_star_action_server.cpp  a_star_helpers.cpp  checklist.md
slam_bot/src/slambot_orchestration/: CMakeLists.txt  package.xml
slam_bot/src/slambot_orchestration/src/: orchestration_node.cpp
slam_bot/src/slambot_slam_toolbox/: CMakeLists.txt  package.xml
slam_bot/src/slambot_slam_toolbox/config/: slam_toolbox.yaml
slam_bot/src/slambot_slam_toolbox/launch/: slambot_slam_toolbox.launch.py
slam_bot/src/test_node/: CMakeLists.txt  package.xml
slam_bot/src/test_node/src/: test_node.cpp
(+275 files in other folders)
