<?xml version="1.0"?>
<package format="3">
  <name>paesano_mobile_bridge</name>
  <version>0.0.1</version>
  <description>FastAPI and WebSocket bridge for the Paesano mobile product.</description>
  <maintainer email="josephmarra@example.com">Joseph Marra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>paesano_bringup</depend>
  <depend>paesano_interfaces</depend>
  <depend>paesano_navigation</depend>
  <depend>paesano_orchestration</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
