<?xml version="1.0"?>
<package format="3">
  <name>paesano_orchestration</name>
  <version>0.0.1</version>
  <description>Central command authority for Paesano runtime orchestration.</description>
  <maintainer email="joey.marra2007@gmail.com">Joey Marra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>paesano_bringup</depend>
  <depend>paesano_interfaces</depend>
  <depend>paesano_navigation</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
