<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>paesano_orchestrator</name>
  <version>0.0.0</version>
  <description>Navigation orchestrator for Paesano. Owns the navigation lifecycle — receiving goals, calling A*, monitoring LQR, detecting dynamic obstacles via a local costmap, and replanning when the path is blocked.</description>
  <maintainer email="joey.marra2007@gmail.com">Joey Marra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>paesano_local_map</depend>
  <depend>paesano_navigation</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
