<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slambot_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for SLAM robot</description>
  <maintainer email="joey.marra2007@gmail.com">Joey Marra</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch file dependencies -->
  <exec_depend>ros2_mpu6050</exec_depend>
  <exec_depend>ldlidar</exec_depend>
  <exec_depend>tf_publisher</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
