<?xml version="1.0"?>
<package format="3">
  <name>slambot_description</name>
  <version>0.0.1</version>
  <description>SLAMBot robot description package.</description>

  <maintainer email="joey.marra2007@gmail.com">Joey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>