<?xml version="1.0"?>
<package format="3">
  <name>slambot_orchestration</name>
  <version>0.0.1</version>
  <description>Central command authority for Slambot runtime orchestration.</description>
  <maintainer email="josephmarra@example.com">Joseph Marra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>slambot_bringup</depend>
  <depend>slambot_interfaces</depend>
  <depend>slambot_navigation</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
